# int20h_2023

./: .dockerignore  .gitignore  .gitlab-ci.yaml  Makefile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  tox.ini  tsconfig.frontend.json
.github/workflows/: fly.yaml
config/: dev.yaml  prd.yaml  pytest.yaml  stg.yaml
docker/: backend.dockerfile  checks.dockerfile  frontend.dockerfile
hackaton/: __main__.py  app.py  config.py  const.py  exceptions.py  middlewares.py  routes.py  signals.py  trafarets.py  utils.py  views.py
hackaton/bl/: auth.py  ingredient.py  ingredient_type.py  recipe.py  recipe_category.py  search.py
hackaton/handlers/: auth.py  health.py  index.py  ingredient.py  recipe.py  search.py  user.py
hackaton/handlers/admin/: migration.py  recipe.py
hackaton/lib/: auth.py  exceptions.py  query.py  rest_utils.py  utils.py
hackaton/lib/forms/: __init__.py  common.py  search.py
hackaton/lib/payloads/: auth.py  indredient.py  ingredient.py  recipe.py  schemas.py
hackaton/models/: __init__.py  ingredient.py  ingredient_item.py  ingredient_type.py  recipe.py  recipe_category.py  source.py  user.py
hackaton/tasks/: recipe.py
hackaton/tasks/mealdb/: __init__.py  ingredient.py  recipe.py  recipe_category.py
hackaton/tests/: test_dummy.py
requirements/: backend.in  backend.txt  checks.in  checks.txt
static/: index.html  index.tsx  manifest.json
static/universal-styles/: PageMixins.scss  RecipePreview.css  RecipePreview.scss
webpack/: base.js  dev.js  prd.js  real.js  stg.js
(+43 files in other folders)
